# backend/src/infra/http/handler.rs
@@ -4,20 +4,39 @@ use axum::{
     response::IntoResponse,
 };
 use hyper::StatusCode;
-use serde::{Deserialize, Deserializer};
+use serde::{Deserialize, Deserializer, Serialize};
 use serde_json::{Value, json};
 use sqlx::sqlite;
-use utoipa::IntoParams;
+
+use utoipa::{IntoParams, ToSchema};
+
 use utoipa_axum::{router::OpenApiRouter, routes};
 
 use crate::{
     application::{
-        handlers::{handler_create_klines::CrawlPricePayload, handler_create_signals::ComputeSignalPayload}, model::{Job, JobType}
-    }, domain::model::{Kline, Signal, User}, infra::{
+        handlers::handler_create_stock::CreateStockPayload,
+        model::{Job, JobType},
+    },
+    domain::model::{Kline, Signal, User},
+    infra::{
         http::AppState,
-        logging::{logit, LogEntry, LogLevel},
-    }
+        logging::{LogEntry, LogLevel, logit},
+    },
 };
+
+#[derive(Serialize, Deserialize, ToSchema)]
+enum ApiError {
+    #[schema(example = "failed to retrieve from database")]
+    DatabaseError(String),
+    #[schema(example = "id = 1")]
+    NotFound(String),
+    #[schema(example = "require query param x")]
+    MissingInput(String),
+    #[schema(example = "missing api key")]
+    Unauthorized(String),
+    #[schema(example = "job runner error")]
+    RunnerError(String),
+}
 
 pub fn create_routes_api(app_state: AppState) -> OpenApiRouter {
     OpenApiRouter::new()
@@ -27,12 +46,10 @@ pub fn create_routes_api(app_state: AppState) -> OpenApiRouter {
         .routes(routes!(list_jobs))
         // /signals
         .routes(routes!(list_signals))
-        // /crawl?tickers=a,b,c
-        .routes(routes!(crawl_klines))
+        // /stocks POST
+        .routes(routes!(create_stocks))
         // /klines?ticker=a
         .routes(routes!(list_klines))
-        // /run/signals
-        .routes(routes!(compute_signals))
         .with_state(app_state)
 }
 
@@ -57,6 +74,8 @@ pub async fn check_handler(State(state): State<AppState>) -> Json<Value> {
     }
 }
 
+// FIX: create better ErrorResponse to frontend.
+
 /// List all jobs.
 ///
 /// Returns all jobs.
@@ -66,14 +85,11 @@ pub async fn check_handler(State(state): State<AppState>) -> Json<Value> {
     tag = "candlescyther",
     responses(
         (status = 200, description = "List all jobs from jobs table.", body = [Job]),
-        (status = 500, description = "Database error", body = serde_json::Value)
+        (status = 500, description = "Database error", body = ApiError)
     )
 )]
 pub async fn list_jobs(State(state): State<AppState>) -> impl IntoResponse {
-    match sqlx::query_as::<sqlite::Sqlite, Job>("SELECT * FROM jobs")
-        .fetch_all(&state.db)
-        .await
-    {
+    match state.runner.repo_job.get_jobs_all().await {
         Ok(jobs) => (StatusCode::OK, Json(jobs)).into_response(),
         Err(e) => {
             logit(
@@ -88,7 +104,7 @@ pub async fn list_jobs(State(state): State<AppState>) -> impl IntoResponse {
             .await;
             (
                 StatusCode::INTERNAL_SERVER_ERROR,
-                Json(json!({"message": "Database error"})),
+                Json(ApiError::DatabaseError(e.to_string())),
             )
                 .into_response()
         }
@@ -104,7 +120,7 @@ pub async fn list_jobs(State(state): State<AppState>) -> impl IntoResponse {
     tag = "candlescyther",
     responses(
         (status = 200, description = "List all logs from logs table.", body = [LogEntry]),
-        (status = 500, description = "Database error", body = serde_json::Value)
+        (status = 500, description = "Database error", body = ApiError)
     )
 )]
 pub async fn list_logs(State(state): State<AppState>) -> impl IntoResponse {
@@ -126,7 +142,7 @@ pub async fn list_logs(State(state): State<AppState>) -> impl IntoResponse {
             .await;
             (
                 StatusCode::INTERNAL_SERVER_ERROR,
-                Json(json!({"message": "Database error"})),
+                Json(ApiError::DatabaseError(e.to_string())),
             )
                 .into_response()
         }
@@ -142,14 +158,11 @@ pub async fn list_logs(State(state): State<AppState>) -> impl IntoResponse {
     tag = "candlescyther",
     responses(
         (status = 200, description = "List all signals from signals table.", body = [Signal]),
-        (status = 500, description = "Database error", body = serde_json::Value)
+        (status = 500, description = "Database error", body = ApiError)
     )
 )]
 pub async fn list_signals(State(state): State<AppState>) -> impl IntoResponse {
-    match sqlx::query_as::<sqlite::Sqlite, Signal>("SELECT * FROM signals")
-        .fetch_all(&state.db)
-        .await
-    {
+    match state.runner.repo_domain.get_signals_all().await {
         Ok(signals) => (StatusCode::OK, Json(signals)).into_response(),
         Err(e) => {
             logit(
@@ -164,7 +177,7 @@ pub async fn list_signals(State(state): State<AppState>) -> impl IntoResponse {
             .await;
             (
                 StatusCode::INTERNAL_SERVER_ERROR,
-                Json(json!({"message": "Database error"})),
+                Json(ApiError::DatabaseError(e.to_string())),
             )
                 .into_response()
         }
@@ -175,41 +188,43 @@ pub async fn list_signals(State(state): State<AppState>) -> impl IntoResponse {
 ///
 /// Returns a 200 if the job is submitted.
 #[utoipa::path(
-    get,
-    path = "/crawl",
+    post,
+    path = "/stocks",
     tag = "candlescyther",
-    params(
-        CrawlQuery
-    ),
     responses(
         (status = 200, description = "Job submitted"),
-        (status = 400, description = "Tickers is required", body = serde_json::Value),
-        (status = 500, description = "Job runner error", body = serde_json::Value),
+        (status = 400, description = "Tickers is required", body = ApiError),
+        (status = 500, description = "Job runner error", body = ApiError),
     )
 )]
-pub async fn crawl_klines(
+pub async fn create_stocks(
     State(state): State<AppState>,
-    query: Query<CrawlQuery>,
+    Json(req_body): Json<CreateStockRequest>,
 ) -> impl IntoResponse {
-    if query.tickers.is_empty() {
+    let tickers: Vec<String> = req_body
+        .tickers
+        .split(',')
+        .map(|s| s.trim().to_string())
+        .collect();
+
+    if tickers.is_empty() {
         return (
             StatusCode::BAD_REQUEST,
-            Json(json!({"error": "tickers: [String] is required."})),
+            Json(ApiError::MissingInput(
+                "`ticker` field required in body".to_string(),
+            )),
         )
             .into_response();
     }
 
     let mut jobs = vec![];
-    for ticker in &query.tickers {
-        jobs.push(
-            Job::new(JobType::CrawlPrice,  
-            json!(CrawlPricePayload {
+    for ticker in &tickers {
+        jobs.push(Job::new(
+            JobType::CreateStock,
+            json!(CreateStockPayload {
                 ticker: ticker.to_string(),
-                start: "0".to_string(),
-                end: "20500101".to_string(),
-            })
-            )
-        );
+            }),
+        ));
     }
 
     if let Err(e) = state.runner.repo_job.create_jobs(jobs).await {
@@ -217,15 +232,15 @@ pub async fn crawl_klines(
             &state,
             LogEntry::new(
                 LogLevel::Error,
-                "failed to create_jobs in crawl_klines",
+                "failed to create_jobs in create_stocks",
                 "http/handlers.rs",
-                180,
+                214,
             ),
         )
         .await;
         return (
             StatusCode::INTERNAL_SERVER_ERROR,
-            Json(json!({"message": format!("job runner error {}", e.to_string())})),
+            Json(ApiError::RunnerError(e.to_string())),
         )
             .into_response();
     }
@@ -248,8 +263,13 @@ pub async fn crawl_klines(
     (StatusCode::OK).into_response()
 }
 
-#[derive(Deserialize, IntoParams)]
-pub struct CrawlQuery {
+#[derive(Deserialize, ToSchema)]
+pub struct CreateStockRequest {
+    pub tickers: String,
+}
+
+#[derive(Deserialize, ToSchema)]
+pub struct DemoQuery {
     #[serde(deserialize_with = "deserialize_comma_separated")]
     pub tickers: Vec<String>,
 }
@@ -262,57 +282,6 @@ where
     Ok(s.split(',').map(|s| s.trim().to_string()).collect())
 }
 
-/// Trigger compute signals job.
-///
-/// Returns OK if job submitted.
-#[utoipa::path(
-    get,
-    path = "/run/signals",
-    tag = "candlescyther",
-    responses(
-        (status = 200, description = "Job submitted"),
-        (status = 500, description = "Job runner error", body = serde_json::Value),
-    )
-)]
-pub async fn compute_signals(State(state): State<AppState>) -> impl IntoResponse {
-    let job = Job::new(JobType::ComputeSignal, json!(ComputeSignalPayload { ticker: "105.TSLA".to_string()}));
-
-    if let Err(e) = state.runner.repo_job.create_jobs(vec![job]).await {
-        logit(
-            &state,
-            LogEntry::new(
-                LogLevel::Error,
-                "failed to create_jobs in compute_signals",
-                "http/handlers.rs",
-                199,
-            ),
-        )
-        .await;
-        return (
-            StatusCode::INTERNAL_SERVER_ERROR,
-            Json(json!({"message": format!("job runner error {}", e.to_string())})),
-        )
-            .into_response();
-    }
-
-    tokio::spawn(async move {
-        if let Err(e) = state.runner.run().await {
-            logit(
-                &state,
-                LogEntry::new(
-                    LogLevel::Error,
-                    format!("runner error: {}", e),
-                    "http/handlers.rs",
-                    218,
-                ),
-            )
-            .await;
-        }
-    });
-
-    (StatusCode::OK).into_response()
-}
-
 /// List all klines per ticker.
 ///
 /// Returns all klines for give ticker.
@@ -321,27 +290,32 @@ pub async fn compute_signals(State(state): State<AppState>) -> impl IntoResponse
     path = "/klines",
     tag = "candlescyther",
     params(
-        KlineQuery   
+        KlineQuery,
     ),
     responses(
         (status = 200, description = "List all klines for the ticker", body = [Kline]),
-        (status = 400, description = "Ticker is required", body = serde_json::Value),
-        (status = 500, description = "Database error", body = serde_json::Value)
+        (status = 400, description = "Ticker is required", body = ApiError),
+        (status = 500, description = "Database error", body = ApiError)
     )
 )]
-pub async fn list_klines(State(state): State<AppState>, query: Query<KlineQuery>) -> impl IntoResponse {
+pub async fn list_klines(
+    State(state): State<AppState>,
+    query: Query<KlineQuery>,
+) -> impl IntoResponse {
     if query.ticker.is_empty() {
         return (
             StatusCode::BAD_REQUEST,
-            Json(json!({"error": "ticker: String is required."})),
+            Json(ApiError::MissingInput("missing param".to_string())),
         )
             .into_response();
     }
 
-    match sqlx::query_as::<sqlite::Sqlite, Kline>("SELECT * FROM klines WHERE k_ticker = ? ORDER BY k_date ASC")
-        .bind(&query.ticker)
-        .fetch_all(&state.db)
-        .await
+    match sqlx::query_as::<sqlite::Sqlite, Kline>(
+        "SELECT * FROM klines WHERE k_ticker = ? ORDER BY k_date ASC",
+    )
+    .bind(&query.ticker)
+    .fetch_all(&state.db)
+    .await
     {
         Ok(signals) => (StatusCode::OK, Json(signals)).into_response(),
         Err(e) => {
@@ -357,7 +331,7 @@ pub async fn list_klines(State(state): State<AppState>, query: Query<KlineQuery>
             .await;
             (
                 StatusCode::INTERNAL_SERVER_ERROR,
-                Json(json!({"message": "Database error"})),
+                Json(ApiError::DatabaseError(e.to_string())),
             )
                 .into_response()
         }
